code/typescript/QuotesAPIforDigitalPortals/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Quotes API for Digital Portals client library for JavaScript

[![npm](https://img.shields.io/npm/v/@factset/sdk-quotesapifordigitalportals)](https://www.npmjs.com/package/@factset/sdk-quotesapifordigitalportals)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: 0.9.4
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen

## Requirements

* Node.js >= 14

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-quotesapifordigitalportals
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-quotesapifordigitalportals
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=14. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 16
      nvm use 16
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

```javascript
const { ApiClient, BasicApi } = require('@factset/sdk-quotesapifordigitalportals');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new BasicApi();
const opts = {
  'attributes': ["null"] // [String] | Limit the attributes returned in the response to the specified set.
};

// Call api endpoint
apiInstance.getBasicAssetClassList(opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Documentation for API Endpoints

All URIs are relative to *http://api.factset.com/wealth/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*quotesapifordigitalportals.BasicApi* | [**getBasicAssetClassList**](docs/BasicApi.md#getBasicAssetClassList) | **GET** /basic/assetClass/list | List of asset classes.
*quotesapifordigitalportals.BasicApi* | [**getBasicBenchmarkTypeList**](docs/BasicApi.md#getBasicBenchmarkTypeList) | **GET** /basic/benchmark/type/list | List of benchmark types.
*quotesapifordigitalportals.BasicApi* | [**getBasicFrequencyTypeList**](docs/BasicApi.md#getBasicFrequencyTypeList) | **GET** /basic/frequency/type/list | List of frequency types.
*quotesapifordigitalportals.BasicApi* | [**getBasicLanguageGet**](docs/BasicApi.md#getBasicLanguageGet) | **GET** /basic/language/get | Details for a language.
*quotesapifordigitalportals.BasicApi* | [**getBasicLanguageGetByCode**](docs/BasicApi.md#getBasicLanguageGetByCode) | **GET** /basic/language/getByCode | Details for a language identified by code.
*quotesapifordigitalportals.BasicApi* | [**getBasicLanguageList**](docs/BasicApi.md#getBasicLanguageList) | **GET** /basic/language/list | List of languages.
*quotesapifordigitalportals.BasicApi* | [**getBasicMarketGet**](docs/BasicApi.md#getBasicMarketGet) | **GET** /basic/market/get | Details of a market.
*quotesapifordigitalportals.BasicApi* | [**getBasicMarketGroupList**](docs/BasicApi.md#getBasicMarketGroupList) | **GET** /basic/market/group/list | List of market groups.
*quotesapifordigitalportals.BasicApi* | [**getBasicMarketTypeList**](docs/BasicApi.md#getBasicMarketTypeList) | **GET** /basic/market/type/list | List of market types.
*quotesapifordigitalportals.BasicApi* | [**getBasicMediaKindList**](docs/BasicApi.md#getBasicMediaKindList) | **GET** /basic/media/kind/list | List of media kinds.
*quotesapifordigitalportals.BasicApi* | [**getBasicRegionContinentGet**](docs/BasicApi.md#getBasicRegionContinentGet) | **GET** /basic/region/continent/get | Details for a continent.
*quotesapifordigitalportals.BasicApi* | [**getBasicRegionContinentList**](docs/BasicApi.md#getBasicRegionContinentList) | **GET** /basic/region/continent/list | List of continents.
*quotesapifordigitalportals.BasicApi* | [**getBasicRegionCountryGet**](docs/BasicApi.md#getBasicRegionCountryGet) | **GET** /basic/region/country/get | Details for a country.
*quotesapifordigitalportals.BasicApi* | [**getBasicRegionCountryGetByCode**](docs/BasicApi.md#getBasicRegionCountryGetByCode) | **GET** /basic/region/country/getByCode | Details for a country identified by code.
*quotesapifordigitalportals.BasicApi* | [**getBasicRegionCountryList**](docs/BasicApi.md#getBasicRegionCountryList) | **GET** /basic/region/country/list | List of countries.
*quotesapifordigitalportals.BasicApi* | [**getBasicRegionGet**](docs/BasicApi.md#getBasicRegionGet) | **GET** /basic/region/get | Details for a region.
*quotesapifordigitalportals.BasicApi* | [**getBasicRegionList**](docs/BasicApi.md#getBasicRegionList) | **GET** /basic/region/list | List of regions.
*quotesapifordigitalportals.BasicApi* | [**getBasicTimezoneGet**](docs/BasicApi.md#getBasicTimezoneGet) | **GET** /basic/timezone/get | Details of a timezone.
*quotesapifordigitalportals.BasicApi* | [**getBasicTimezoneGetByName**](docs/BasicApi.md#getBasicTimezoneGetByName) | **GET** /basic/timezone/getByName | Details of a timezone identified by name.
*quotesapifordigitalportals.BasicApi* | [**getBasicValueUnitAlternativeList**](docs/BasicApi.md#getBasicValueUnitAlternativeList) | **GET** /basic/valueUnit/alternative/list | List of alternative units.
*quotesapifordigitalportals.BasicApi* | [**getBasicValueUnitCurrencyFractionalGet**](docs/BasicApi.md#getBasicValueUnitCurrencyFractionalGet) | **GET** /basic/valueUnit/currency/fractional/get | Details of a fractional currency.
*quotesapifordigitalportals.BasicApi* | [**getBasicValueUnitCurrencyFractionalList**](docs/BasicApi.md#getBasicValueUnitCurrencyFractionalList) | **GET** /basic/valueUnit/currency/fractional/list | List of fractional currencies.
*quotesapifordigitalportals.BasicApi* | [**getBasicValueUnitGet**](docs/BasicApi.md#getBasicValueUnitGet) | **GET** /basic/valueUnit/get | Details of a value unit.
*quotesapifordigitalportals.BasicApi* | [**postBasicBackgroundTextTypeList**](docs/BasicApi.md#postBasicBackgroundTextTypeList) | **POST** /basic/backgroundText/type/list | List of background text types.
*quotesapifordigitalportals.BasicApi* | [**postBasicDeliveryList**](docs/BasicApi.md#postBasicDeliveryList) | **POST** /basic/delivery/list | List of deliveries.
*quotesapifordigitalportals.BasicApi* | [**postBasicMarketList**](docs/BasicApi.md#postBasicMarketList) | **POST** /basic/market/list | List of markets.
*quotesapifordigitalportals.BasicApi* | [**postBasicMediaTypeList**](docs/BasicApi.md#postBasicMediaTypeList) | **POST** /basic/media/type/list | List of Internet media types.
*quotesapifordigitalportals.BasicApi* | [**postBasicMicOperatingList**](docs/BasicApi.md#postBasicMicOperatingList) | **POST** /basic/mic/operating/list | List of operating market identifier codes (MIC).
*quotesapifordigitalportals.BasicApi* | [**postBasicTimezoneList**](docs/BasicApi.md#postBasicTimezoneList) | **POST** /basic/timezone/list | List of timezones.
*quotesapifordigitalportals.BasicApi* | [**postBasicValueUnitCurrencyList**](docs/BasicApi.md#postBasicValueUnitCurrencyList) | **POST** /basic/valueUnit/currency/list | List of currencies.
*quotesapifordigitalportals.BasicApi* | [**postBasicValueUnitCurrencyMainList**](docs/BasicApi.md#postBasicValueUnitCurrencyMainList) | **POST** /basic/valueUnit/currency/main/list | List of main currencies.
*quotesapifordigitalportals.BasicApi* | [**postBasicValueUnitList**](docs/BasicApi.md#postBasicValueUnitList) | **POST** /basic/valueUnit/list | List of value units.
*quotesapifordigitalportals.CategoryApi* | [**getCategoryDatasetList**](docs/CategoryApi.md#getCategoryDatasetList) | **GET** /category/dataset/list | List of entitled category datasets.
*quotesapifordigitalportals.CategoryApi* | [**getCategoryGet**](docs/CategoryApi.md#getCategoryGet) | **GET** /category/get | Details of a category.
*quotesapifordigitalportals.CategoryApi* | [**getCategoryInstrumentList**](docs/CategoryApi.md#getCategoryInstrumentList) | **GET** /category/instrument/list | List of instruments where a specific dataset has assigned a given category.
*quotesapifordigitalportals.CategoryApi* | [**getCategoryLevelGet**](docs/CategoryApi.md#getCategoryLevelGet) | **GET** /category/level/get | Details of a category level.
*quotesapifordigitalportals.CategoryApi* | [**getCategoryList**](docs/CategoryApi.md#getCategoryList) | **GET** /category/list | List of categories.
*quotesapifordigitalportals.CategoryApi* | [**getCategoryListByLevel**](docs/CategoryApi.md#getCategoryListByLevel) | **GET** /category/listByLevel | List of categories assigned to a category level.
*quotesapifordigitalportals.CategoryApi* | [**getCategoryListBySystem**](docs/CategoryApi.md#getCategoryListBySystem) | **GET** /category/listBySystem | List of categories assigned to a category system.
*quotesapifordigitalportals.CategoryApi* | [**getCategoryPathGet**](docs/CategoryApi.md#getCategoryPathGet) | **GET** /category/path/get | Path from the first level to the level of a specific category.
*quotesapifordigitalportals.CategoryApi* | [**getCategorySystemGet**](docs/CategoryApi.md#getCategorySystemGet) | **GET** /category/system/get | Details of an entitled category system.
*quotesapifordigitalportals.CategoryApi* | [**getCategorySystemList**](docs/CategoryApi.md#getCategorySystemList) | **GET** /category/system/list | List of entitled category systems.
*quotesapifordigitalportals.CategoryApi* | [**getCategorySystemTypeList**](docs/CategoryApi.md#getCategorySystemTypeList) | **GET** /category/system/type/list | List of category system types.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentBackgroundTextListByInstrument**](docs/InstrumentApi.md#getInstrumentBackgroundTextListByInstrument) | **GET** /instrument/backgroundText/listByInstrument | Background texts of an instrument.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentCompliancePropertyListByInstrument**](docs/InstrumentApi.md#getInstrumentCompliancePropertyListByInstrument) | **GET** /instrument/complianceProperty/listByInstrument | Compliance properties of an instrument.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentCompositeGet**](docs/InstrumentApi.md#getInstrumentCompositeGet) | **GET** /instrument/composite/get | Composite instrument and its components.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentCouponDayCountConventionTypeList**](docs/InstrumentApi.md#getInstrumentCouponDayCountConventionTypeList) | **GET** /instrument/coupon/dayCountConvention/type/list | List of day count convention types.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentCouponInterestRateTypeList**](docs/InstrumentApi.md#getInstrumentCouponInterestRateTypeList) | **GET** /instrument/coupon/interestRate/type/list | List of interest rate types.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentCouponKeyDataGet**](docs/InstrumentApi.md#getInstrumentCouponKeyDataGet) | **GET** /instrument/coupon/keyData/get | Interest rate details for selected periods of an interest-bearing instrument.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentCouponList**](docs/InstrumentApi.md#getInstrumentCouponList) | **GET** /instrument/coupon/list | List of coupons for an interest-bearing instrument.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentCrossReferenceGetByISIN**](docs/InstrumentApi.md#getInstrumentCrossReferenceGetByISIN) | **GET** /instrument/crossReference/getByISIN | Translate ISIN to instrument.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentCrossReferenceGetByWKN**](docs/InstrumentApi.md#getInstrumentCrossReferenceGetByWKN) | **GET** /instrument/crossReference/getByWKN | Translate WKN to instrument.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentCrossReferenceHistoryGetByISIN**](docs/InstrumentApi.md#getInstrumentCrossReferenceHistoryGetByISIN) | **GET** /instrument/crossReference/history/getByISIN | ISIN to instrument translation history.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentCrossReferenceHistoryGetByWKN**](docs/InstrumentApi.md#getInstrumentCrossReferenceHistoryGetByWKN) | **GET** /instrument/crossReference/history/getByWKN | WKN to instrument translation history.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentExchangeRateGet**](docs/InstrumentApi.md#getInstrumentExchangeRateGet) | **GET** /instrument/exchangeRate/get | Retrieve an exchange rate instrument identifier.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentExchangeRateGetByISOCode**](docs/InstrumentApi.md#getInstrumentExchangeRateGetByISOCode) | **GET** /instrument/exchangeRate/getByISOCode | Retrieve an exchange rate instrument identifier.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentGet**](docs/InstrumentApi.md#getInstrumentGet) | **GET** /instrument/get | Basic data for an instrument.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentGetByNotation**](docs/InstrumentApi.md#getInstrumentGetByNotation) | **GET** /instrument/getByNotation | Basic data for an instrument.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentLegalEntityBackgroundTextListByInstrument**](docs/InstrumentApi.md#getInstrumentLegalEntityBackgroundTextListByInstrument) | **GET** /instrument/legalEntity/backgroundText/listByInstrument | Role-specific background texts of legal entities related to an instrument.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentLegalEntityCompliancePropertyListByInstrument**](docs/InstrumentApi.md#getInstrumentLegalEntityCompliancePropertyListByInstrument) | **GET** /instrument/legalEntity/complianceProperty/listByInstrument | Role-specific compliance properties of legal entities related to an instrument.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentMifidGet**](docs/InstrumentApi.md#getInstrumentMifidGet) | **GET** /instrument/mifid/get | MiFID II data for a financial instrument.
*quotesapifordigitalportals.InstrumentApi* | [**getInstrumentSearchBasic**](docs/InstrumentApi.md#getInstrumentSearchBasic) | **GET** /instrument/search/basic | Basic search for instruments.
*quotesapifordigitalportals.InstrumentApi* | [**postInstrumentBackgroundTextTypeList**](docs/InstrumentApi.md#postInstrumentBackgroundTextTypeList) | **POST** /instrument/backgroundText/type/list | List of background text types for instruments.
*quotesapifordigitalportals.InstrumentApi* | [**postInstrumentBenchmarkList**](docs/InstrumentApi.md#postInstrumentBenchmarkList) | **POST** /instrument/benchmark/list | List of benchmarks of a financial instrument.
*quotesapifordigitalportals.InstrumentApi* | [**postInstrumentCategoryList**](docs/InstrumentApi.md#postInstrumentCategoryList) | **POST** /instrument/category/list | List of categories assigned to a specific instrument the application is entitled to see.
*quotesapifordigitalportals.InstrumentApi* | [**postInstrumentCompliancePropertyList**](docs/InstrumentApi.md#postInstrumentCompliancePropertyList) | **POST** /instrument/complianceProperty/list | List of compliance properties for instruments.
*quotesapifordigitalportals.InstrumentApi* | [**postInstrumentCrossReferenceListByISIN**](docs/InstrumentApi.md#postInstrumentCrossReferenceListByISIN) | **POST** /instrument/crossReference/listByISIN | Translate a list of ISINs to instruments.
*quotesapifordigitalportals.InstrumentApi* | [**postInstrumentCrossReferenceListByWKN**](docs/InstrumentApi.md#postInstrumentCrossReferenceListByWKN) | **POST** /instrument/crossReference/listByWKN | Translate a list of WKNs to instruments.
*quotesapifordigitalportals.InstrumentApi* | [**postInstrumentRatingGradeList**](docs/InstrumentApi.md#postInstrumentRatingGradeList) | **POST** /instrument/rating/grade/list | List of rating grades for a list of instruments.
*quotesapifordigitalportals.NotationApi* | [**getNotationCrossReferenceFactSetIdentifierGet**](docs/NotationApi.md#getNotationCrossReferenceFactSetIdentifierGet) | **GET** /notation/crossReference/factSetIdentifier/get | Retrieve FactSet identifiers for a given notation.
*quotesapifordigitalportals.NotationApi* | [**getNotationCrossReferenceGetByFactSetMarketSymbol**](docs/NotationApi.md#getNotationCrossReferenceGetByFactSetMarketSymbol) | **GET** /notation/crossReference/getByFactSetMarketSymbol | Translate a FactSet market symbol to a notation.
*quotesapifordigitalportals.NotationApi* | [**getNotationGet**](docs/NotationApi.md#getNotationGet) | **GET** /notation/get | Basic data for a notation.
*quotesapifordigitalportals.NotationApi* | [**getNotationKeyFiguresMonth1Get**](docs/NotationApi.md#getNotationKeyFiguresMonth1Get) | **GET** /notation/keyFigures/month/1/get | End-of-day (EOD) key figures for the time range of one month.
*quotesapifordigitalportals.NotationApi* | [**getNotationKeyFiguresMonth1List**](docs/NotationApi.md#getNotationKeyFiguresMonth1List) | **GET** /notation/keyFigures/month/1/list | End-of-day (EOD) key figures for the time range of one month, for a list of notations.
*quotesapifordigitalportals.NotationApi* | [**getNotationKeyFiguresMonth3Get**](docs/NotationApi.md#getNotationKeyFiguresMonth3Get) | **GET** /notation/keyFigures/month/3/get | End-of-day (EOD) key figures for the time range of three months.
*quotesapifordigitalportals.NotationApi* | [**getNotationKeyFiguresMonth3List**](docs/NotationApi.md#getNotationKeyFiguresMonth3List) | **GET** /notation/keyFigures/month/3/list | End-of-day (EOD) key figures for the time range of three months, for a list of notations.
*quotesapifordigitalportals.NotationApi* | [**getNotationKeyFiguresMonth6Get**](docs/NotationApi.md#getNotationKeyFiguresMonth6Get) | **GET** /notation/keyFigures/month/6/get | End-of-day (EOD) key figures for the time range of six months.
*quotesapifordigitalportals.NotationApi* | [**getNotationKeyFiguresMonth6List**](docs/NotationApi.md#getNotationKeyFiguresMonth6List) | **GET** /notation/keyFigures/month/6/list | End-of-day (EOD) key figures for the time range of six months, for a list of notations.
*quotesapifordigitalportals.NotationApi* | [**getNotationKeyFiguresWeek1Get**](docs/NotationApi.md#getNotationKeyFiguresWeek1Get) | **GET** /notation/keyFigures/week/1/get | End-of-day (EOD) key figures for the time range of one week.
*quotesapifordigitalportals.NotationApi* | [**getNotationKeyFiguresWeek1List**](docs/NotationApi.md#getNotationKeyFiguresWeek1List) | **GET** /notation/keyFigures/week/1/list | End-of-day (EOD) key figures for the time range of one week, for a list of notations.
*quotesapifordigitalportals.NotationApi* | [**getNotationKeyFiguresYear1Get**](docs/NotationApi.md#getNotationKeyFiguresYear1Get) | **GET** /notation/keyFigures/year/1/get | End-of-day (EOD) key figures for the time range of one year.
*quotesapifordigitalportals.NotationApi* | [**getNotationKeyFiguresYear1List**](docs/NotationApi.md#getNotationKeyFiguresYear1List) | **GET** /notation/keyFigures/year/1/list | End-of-day (EOD) key figures for the time range of one year, for a list of notations.
*quotesapifordigitalportals.NotationApi* | [**getNotationKeyFiguresYear3Get**](docs/NotationApi.md#getNotationKeyFiguresYear3Get) | **GET** /notation/keyFigures/year/3/get | End-of-day (EOD) key figures for the time range of three years.
*quotesapifordigitalportals.NotationApi* | [**getNotationKeyFiguresYear3List**](docs/NotationApi.md#getNotationKeyFiguresYear3List) | **GET** /notation/keyFigures/year/3/list | End-of-day (EOD) key figures for the time range of three years, for a list of notations.
*quotesapifordigitalportals.NotationApi* | [**getNotationKeyFiguresYear5Get**](docs/NotationApi.md#getNotationKeyFiguresYear5Get) | **GET** /notation/keyFigures/year/5/get | End-of-day (EOD) key figures for the time range of five years.
*quotesapifordigitalportals.NotationApi* | [**getNotationKeyFiguresYear5List**](docs/NotationApi.md#getNotationKeyFiguresYear5List) | **GET** /notation/keyFigures/year/5/list | End-of-day (EOD) key figures for the time range of five years, for a list of notations.
*quotesapifordigitalportals.NotationApi* | [**getNotationKeyFiguresYearToDateGet**](docs/NotationApi.md#getNotationKeyFiguresYearToDateGet) | **GET** /notation/keyFigures/yearToDate/get | End-of-day (EOD) key figures for the time range year-to-date (YTD)..
*quotesapifordigitalportals.NotationApi* | [**getNotationKeyFiguresYearToDateList**](docs/NotationApi.md#getNotationKeyFiguresYearToDateList) | **GET** /notation/keyFigures/yearToDate/list | End-of-day (EOD) key figures for the time range year-to-date (YTD), for a list of notations..
*quotesapifordigitalportals.NotationApi* | [**getNotationList**](docs/NotationApi.md#getNotationList) | **GET** /notation/list | Basic data for a list of notations.
*quotesapifordigitalportals.NotationApi* | [**getNotationSearchBasic**](docs/NotationApi.md#getNotationSearchBasic) | **GET** /notation/search/basic | Basic search for notations.
*quotesapifordigitalportals.NotationApi* | [**getNotationSearchByTextRankedByVolume**](docs/NotationApi.md#getNotationSearchByTextRankedByVolume) | **GET** /notation/searchByTextRankedByVolume | Basic search for notations.
*quotesapifordigitalportals.NotationApi* | [**getNotationStatusGet**](docs/NotationApi.md#getNotationStatusGet) | **GET** /notation/status/get | Intraday trading status of a notation.
*quotesapifordigitalportals.NotationApi* | [**postNotationCrossReferenceFactSetIdentifierListByFactSetIdentifier**](docs/NotationApi.md#postNotationCrossReferenceFactSetIdentifierListByFactSetIdentifier) | **POST** /notation/crossReference/factSetIdentifier/listByFactSetIdentifier | Retrieve a list of notations for a given FactSet identifier.
*quotesapifordigitalportals.NotationApi* | [**postNotationCrossReferenceFactSetIdentifierListByInstrument**](docs/NotationApi.md#postNotationCrossReferenceFactSetIdentifierListByInstrument) | **POST** /notation/crossReference/factSetIdentifier/listByInstrument | Retrieve a list of FactSet identifiers for a given instrument.
*quotesapifordigitalportals.NotationApi* | [**postNotationCrossReferenceListByISIN**](docs/NotationApi.md#postNotationCrossReferenceListByISIN) | **POST** /notation/crossReference/listByISIN | List of entitled notations.
*quotesapifordigitalportals.NotationApi* | [**postNotationCrossReferenceListByInstrument**](docs/NotationApi.md#postNotationCrossReferenceListByInstrument) | **POST** /notation/crossReference/listByInstrument | List of entitled notations.
*quotesapifordigitalportals.NotationApi* | [**postNotationCrossReferenceListBySymbol**](docs/NotationApi.md#postNotationCrossReferenceListBySymbol) | **POST** /notation/crossReference/listBySymbol | List of entitled notations.
*quotesapifordigitalportals.NotationApi* | [**postNotationSearchByText**](docs/NotationApi.md#postNotationSearchByText) | **POST** /notation/searchByText | Text-based search for notations.
*quotesapifordigitalportals.PricesApi* | [**getPricesBidAskGet**](docs/PricesApi.md#getPricesBidAskGet) | **GET** /prices/bidAsk/get | Current bid and ask prices (best bid / offer) for a notation.
*quotesapifordigitalportals.PricesApi* | [**getPricesBidAskList**](docs/PricesApi.md#getPricesBidAskList) | **GET** /prices/bidAsk/list | Current bid and ask prices (best bid / offer) for a list of notations.
*quotesapifordigitalportals.PricesApi* | [**getPricesGet**](docs/PricesApi.md#getPricesGet) | **GET** /prices/get | Overview of trading on the current trading day, including the latest price, for a notation.
*quotesapifordigitalportals.PricesApi* | [**getPricesList**](docs/PricesApi.md#getPricesList) | **GET** /prices/list | Overview of trading on the current trading day, including the latest price, for a list of notations.
*quotesapifordigitalportals.PricesApi* | [**getPricesOrderbookAggregatedGet**](docs/PricesApi.md#getPricesOrderbookAggregatedGet) | **GET** /prices/orderbook/aggregated/get | Orderbook aggregated by price.
*quotesapifordigitalportals.PricesApi* | [**getPricesOrderbookFullGet**](docs/PricesApi.md#getPricesOrderbookFullGet) | **GET** /prices/orderbook/full/get | Full orderbook
*quotesapifordigitalportals.PricesApi* | [**getPricesTradingScheduleEventTypeList**](docs/PricesApi.md#getPricesTradingScheduleEventTypeList) | **GET** /prices/tradingSchedule/event/type/list | Trading schedule event types.
*quotesapifordigitalportals.PricesApi* | [**postPricesTradingScheduleEventList**](docs/PricesApi.md#postPricesTradingScheduleEventList) | **POST** /prices/tradingSchedule/event/list | Sequence of market-related events.


## Documentation for Models

 - [quotesapifordigitalportals.BasicBackgroundTextTypeListData](docs/BasicBackgroundTextTypeListData.md)
 - [quotesapifordigitalportals.BasicBackgroundTextTypeListDataFilter](docs/BasicBackgroundTextTypeListDataFilter.md)
 - [quotesapifordigitalportals.BasicBackgroundTextTypeListMeta](docs/BasicBackgroundTextTypeListMeta.md)
 - [quotesapifordigitalportals.BasicDeliveryListData](docs/BasicDeliveryListData.md)
 - [quotesapifordigitalportals.BasicDeliveryListDataFilter](docs/BasicDeliveryListDataFilter.md)
 - [quotesapifordigitalportals.BasicDeliveryListMeta](docs/BasicDeliveryListMeta.md)
 - [quotesapifordigitalportals.BasicMarketListData](docs/BasicMarketListData.md)
 - [quotesapifordigitalportals.BasicMarketListDataFilter](docs/BasicMarketListDataFilter.md)
 - [quotesapifordigitalportals.BasicMarketListDataFilterMarkets](docs/BasicMarketListDataFilterMarkets.md)
 - [quotesapifordigitalportals.BasicMarketListMeta](docs/BasicMarketListMeta.md)
 - [quotesapifordigitalportals.BasicMarketListMetaPagination](docs/BasicMarketListMetaPagination.md)
 - [quotesapifordigitalportals.BasicMediaTypeListData](docs/BasicMediaTypeListData.md)
 - [quotesapifordigitalportals.BasicMediaTypeListDataFilter](docs/BasicMediaTypeListDataFilter.md)
 - [quotesapifordigitalportals.BasicMediaTypeListMeta](docs/BasicMediaTypeListMeta.md)
 - [quotesapifordigitalportals.BasicMicOperatingListData](docs/BasicMicOperatingListData.md)
 - [quotesapifordigitalportals.BasicMicOperatingListDataFilter](docs/BasicMicOperatingListDataFilter.md)
 - [quotesapifordigitalportals.BasicMicOperatingListMeta](docs/BasicMicOperatingListMeta.md)
 - [quotesapifordigitalportals.BasicTimezoneListData](docs/BasicTimezoneListData.md)
 - [quotesapifordigitalportals.BasicTimezoneListDataFilter](docs/BasicTimezoneListDataFilter.md)
 - [quotesapifordigitalportals.BasicValueUnitCurrencyMainListData](docs/BasicValueUnitCurrencyMainListData.md)
 - [quotesapifordigitalportals.BasicValueUnitCurrencyMainListDataFilter](docs/BasicValueUnitCurrencyMainListDataFilter.md)
 - [quotesapifordigitalportals.BasicValueUnitListData](docs/BasicValueUnitListData.md)
 - [quotesapifordigitalportals.BasicValueUnitListDataFilter](docs/BasicValueUnitListDataFilter.md)
 - [quotesapifordigitalportals.BasicValueUnitListMeta](docs/BasicValueUnitListMeta.md)
 - [quotesapifordigitalportals.CursorBasedPaginationOutputObject](docs/CursorBasedPaginationOutputObject.md)
 - [quotesapifordigitalportals.CursorBasedPaginationOutputObjectWithoutTotal](docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [quotesapifordigitalportals.ErrorMetaObject](docs/ErrorMetaObject.md)
 - [quotesapifordigitalportals.InlineObject](docs/InlineObject.md)
 - [quotesapifordigitalportals.InlineObject1](docs/InlineObject1.md)
 - [quotesapifordigitalportals.InlineObject10](docs/InlineObject10.md)
 - [quotesapifordigitalportals.InlineObject11](docs/InlineObject11.md)
 - [quotesapifordigitalportals.InlineObject12](docs/InlineObject12.md)
 - [quotesapifordigitalportals.InlineObject13](docs/InlineObject13.md)
 - [quotesapifordigitalportals.InlineObject14](docs/InlineObject14.md)
 - [quotesapifordigitalportals.InlineObject15](docs/InlineObject15.md)
 - [quotesapifordigitalportals.InlineObject16](docs/InlineObject16.md)
 - [quotesapifordigitalportals.InlineObject17](docs/InlineObject17.md)
 - [quotesapifordigitalportals.InlineObject18](docs/InlineObject18.md)
 - [quotesapifordigitalportals.InlineObject19](docs/InlineObject19.md)
 - [quotesapifordigitalportals.InlineObject2](docs/InlineObject2.md)
 - [quotesapifordigitalportals.InlineObject20](docs/InlineObject20.md)
 - [quotesapifordigitalportals.InlineObject21](docs/InlineObject21.md)
 - [quotesapifordigitalportals.InlineObject22](docs/InlineObject22.md)
 - [quotesapifordigitalportals.InlineObject3](docs/InlineObject3.md)
 - [quotesapifordigitalportals.InlineObject4](docs/InlineObject4.md)
 - [quotesapifordigitalportals.InlineObject5](docs/InlineObject5.md)
 - [quotesapifordigitalportals.InlineObject6](docs/InlineObject6.md)
 - [quotesapifordigitalportals.InlineObject7](docs/InlineObject7.md)
 - [quotesapifordigitalportals.InlineObject8](docs/InlineObject8.md)
 - [quotesapifordigitalportals.InlineObject9](docs/InlineObject9.md)
 - [quotesapifordigitalportals.InlineResponse200](docs/InlineResponse200.md)
 - [quotesapifordigitalportals.InlineResponse2001](docs/InlineResponse2001.md)
 - [quotesapifordigitalportals.InlineResponse20010](docs/InlineResponse20010.md)
 - [quotesapifordigitalportals.InlineResponse20010Data](docs/InlineResponse20010Data.md)
 - [quotesapifordigitalportals.InlineResponse20011](docs/InlineResponse20011.md)
 - [quotesapifordigitalportals.InlineResponse20011Data](docs/InlineResponse20011Data.md)
 - [quotesapifordigitalportals.InlineResponse20012](docs/InlineResponse20012.md)
 - [quotesapifordigitalportals.InlineResponse20012Data](docs/InlineResponse20012Data.md)
 - [quotesapifordigitalportals.InlineResponse20013](docs/InlineResponse20013.md)
 - [quotesapifordigitalportals.InlineResponse20013Data](docs/InlineResponse20013Data.md)
 - [quotesapifordigitalportals.InlineResponse20013Kind](docs/InlineResponse20013Kind.md)
 - [quotesapifordigitalportals.InlineResponse20014](docs/InlineResponse20014.md)
 - [quotesapifordigitalportals.InlineResponse20014Data](docs/InlineResponse20014Data.md)
 - [quotesapifordigitalportals.InlineResponse20015](docs/InlineResponse20015.md)
 - [quotesapifordigitalportals.InlineResponse20015Data](docs/InlineResponse20015Data.md)
 - [quotesapifordigitalportals.InlineResponse20015DataNestedRegions](docs/InlineResponse20015DataNestedRegions.md)
 - [quotesapifordigitalportals.InlineResponse20016](docs/InlineResponse20016.md)
 - [quotesapifordigitalportals.InlineResponse20016Data](docs/InlineResponse20016Data.md)
 - [quotesapifordigitalportals.InlineResponse20017](docs/InlineResponse20017.md)
 - [quotesapifordigitalportals.InlineResponse20017Data](docs/InlineResponse20017Data.md)
 - [quotesapifordigitalportals.InlineResponse20017DataCountries](docs/InlineResponse20017DataCountries.md)
 - [quotesapifordigitalportals.InlineResponse20018](docs/InlineResponse20018.md)
 - [quotesapifordigitalportals.InlineResponse20018Data](docs/InlineResponse20018Data.md)
 - [quotesapifordigitalportals.InlineResponse20019](docs/InlineResponse20019.md)
 - [quotesapifordigitalportals.InlineResponse20019Data](docs/InlineResponse20019Data.md)
 - [quotesapifordigitalportals.InlineResponse20019DataSubdivisions](docs/InlineResponse20019DataSubdivisions.md)
 - [quotesapifordigitalportals.InlineResponse2001Data](docs/InlineResponse2001Data.md)
 - [quotesapifordigitalportals.InlineResponse2002](docs/InlineResponse2002.md)
 - [quotesapifordigitalportals.InlineResponse20020](docs/InlineResponse20020.md)
 - [quotesapifordigitalportals.InlineResponse20020Data](docs/InlineResponse20020Data.md)
 - [quotesapifordigitalportals.InlineResponse20020DataSubdivisions](docs/InlineResponse20020DataSubdivisions.md)
 - [quotesapifordigitalportals.InlineResponse20021](docs/InlineResponse20021.md)
 - [quotesapifordigitalportals.InlineResponse20021Data](docs/InlineResponse20021Data.md)
 - [quotesapifordigitalportals.InlineResponse20022](docs/InlineResponse20022.md)
 - [quotesapifordigitalportals.InlineResponse20022Data](docs/InlineResponse20022Data.md)
 - [quotesapifordigitalportals.InlineResponse20023](docs/InlineResponse20023.md)
 - [quotesapifordigitalportals.InlineResponse20023Data](docs/InlineResponse20023Data.md)
 - [quotesapifordigitalportals.InlineResponse20024](docs/InlineResponse20024.md)
 - [quotesapifordigitalportals.InlineResponse20024Data](docs/InlineResponse20024Data.md)
 - [quotesapifordigitalportals.InlineResponse20025](docs/InlineResponse20025.md)
 - [quotesapifordigitalportals.InlineResponse20025Data](docs/InlineResponse20025Data.md)
 - [quotesapifordigitalportals.InlineResponse20026](docs/InlineResponse20026.md)
 - [quotesapifordigitalportals.InlineResponse20026Data](docs/InlineResponse20026Data.md)
 - [quotesapifordigitalportals.InlineResponse20027](docs/InlineResponse20027.md)
 - [quotesapifordigitalportals.InlineResponse20027Data](docs/InlineResponse20027Data.md)
 - [quotesapifordigitalportals.InlineResponse20028](docs/InlineResponse20028.md)
 - [quotesapifordigitalportals.InlineResponse20028Data](docs/InlineResponse20028Data.md)
 - [quotesapifordigitalportals.InlineResponse20028DataMainCurrency](docs/InlineResponse20028DataMainCurrency.md)
 - [quotesapifordigitalportals.InlineResponse20029](docs/InlineResponse20029.md)
 - [quotesapifordigitalportals.InlineResponse20029Data](docs/InlineResponse20029Data.md)
 - [quotesapifordigitalportals.InlineResponse20029MainCurrency](docs/InlineResponse20029MainCurrency.md)
 - [quotesapifordigitalportals.InlineResponse2002Data](docs/InlineResponse2002Data.md)
 - [quotesapifordigitalportals.InlineResponse2003](docs/InlineResponse2003.md)
 - [quotesapifordigitalportals.InlineResponse20030](docs/InlineResponse20030.md)
 - [quotesapifordigitalportals.InlineResponse20030Data](docs/InlineResponse20030Data.md)
 - [quotesapifordigitalportals.InlineResponse20031](docs/InlineResponse20031.md)
 - [quotesapifordigitalportals.InlineResponse20031Data](docs/InlineResponse20031Data.md)
 - [quotesapifordigitalportals.InlineResponse20031DataLevel](docs/InlineResponse20031DataLevel.md)
 - [quotesapifordigitalportals.InlineResponse20031DataParent](docs/InlineResponse20031DataParent.md)
 - [quotesapifordigitalportals.InlineResponse20031DataParentLevel](docs/InlineResponse20031DataParentLevel.md)
 - [quotesapifordigitalportals.InlineResponse20031DataSystem](docs/InlineResponse20031DataSystem.md)
 - [quotesapifordigitalportals.InlineResponse20032](docs/InlineResponse20032.md)
 - [quotesapifordigitalportals.InlineResponse20032Data](docs/InlineResponse20032Data.md)
 - [quotesapifordigitalportals.InlineResponse20032DataCategories](docs/InlineResponse20032DataCategories.md)
 - [quotesapifordigitalportals.InlineResponse20033](docs/InlineResponse20033.md)
 - [quotesapifordigitalportals.InlineResponse20033Data](docs/InlineResponse20033Data.md)
 - [quotesapifordigitalportals.InlineResponse20033DataCategories](docs/InlineResponse20033DataCategories.md)
 - [quotesapifordigitalportals.InlineResponse20033DataParent](docs/InlineResponse20033DataParent.md)
 - [quotesapifordigitalportals.InlineResponse20033DataParent1](docs/InlineResponse20033DataParent1.md)
 - [quotesapifordigitalportals.InlineResponse20033Meta](docs/InlineResponse20033Meta.md)
 - [quotesapifordigitalportals.InlineResponse20034](docs/InlineResponse20034.md)
 - [quotesapifordigitalportals.InlineResponse20034Data](docs/InlineResponse20034Data.md)
 - [quotesapifordigitalportals.InlineResponse20034DataCategories](docs/InlineResponse20034DataCategories.md)
 - [quotesapifordigitalportals.InlineResponse20034DataLevel](docs/InlineResponse20034DataLevel.md)
 - [quotesapifordigitalportals.InlineResponse20034DataParent](docs/InlineResponse20034DataParent.md)
 - [quotesapifordigitalportals.InlineResponse20035](docs/InlineResponse20035.md)
 - [quotesapifordigitalportals.InlineResponse20035Data](docs/InlineResponse20035Data.md)
 - [quotesapifordigitalportals.InlineResponse20035Delivery](docs/InlineResponse20035Delivery.md)
 - [quotesapifordigitalportals.InlineResponse20035System](docs/InlineResponse20035System.md)
 - [quotesapifordigitalportals.InlineResponse20036](docs/InlineResponse20036.md)
 - [quotesapifordigitalportals.InlineResponse20036Data](docs/InlineResponse20036Data.md)
 - [quotesapifordigitalportals.InlineResponse20036Fsym](docs/InlineResponse20036Fsym.md)
 - [quotesapifordigitalportals.InlineResponse20036FsymSecurity](docs/InlineResponse20036FsymSecurity.md)
 - [quotesapifordigitalportals.InlineResponse20036Meta](docs/InlineResponse20036Meta.md)
 - [quotesapifordigitalportals.InlineResponse20037](docs/InlineResponse20037.md)
 - [quotesapifordigitalportals.InlineResponse20037Data](docs/InlineResponse20037Data.md)
 - [quotesapifordigitalportals.InlineResponse20037DataSystem](docs/InlineResponse20037DataSystem.md)
 - [quotesapifordigitalportals.InlineResponse20038](docs/InlineResponse20038.md)
 - [quotesapifordigitalportals.InlineResponse20038Data](docs/InlineResponse20038Data.md)
 - [quotesapifordigitalportals.InlineResponse20038DataCategories](docs/InlineResponse20038DataCategories.md)
 - [quotesapifordigitalportals.InlineResponse20039](docs/InlineResponse20039.md)
 - [quotesapifordigitalportals.InlineResponse20039Data](docs/InlineResponse20039Data.md)
 - [quotesapifordigitalportals.InlineResponse20039DataLevels](docs/InlineResponse20039DataLevels.md)
 - [quotesapifordigitalportals.InlineResponse20039DataType](docs/InlineResponse20039DataType.md)
 - [quotesapifordigitalportals.InlineResponse2003Data](docs/InlineResponse2003Data.md)
 - [quotesapifordigitalportals.InlineResponse2004](docs/InlineResponse2004.md)
 - [quotesapifordigitalportals.InlineResponse20040](docs/InlineResponse20040.md)
 - [quotesapifordigitalportals.InlineResponse20040Data](docs/InlineResponse20040Data.md)
 - [quotesapifordigitalportals.InlineResponse20041](docs/InlineResponse20041.md)
 - [quotesapifordigitalportals.InlineResponse20041Data](docs/InlineResponse20041Data.md)
 - [quotesapifordigitalportals.InlineResponse20042](docs/InlineResponse20042.md)
 - [quotesapifordigitalportals.InlineResponse20042Data](docs/InlineResponse20042Data.md)
 - [quotesapifordigitalportals.InlineResponse20042DataAssetClass](docs/InlineResponse20042DataAssetClass.md)
 - [quotesapifordigitalportals.InlineResponse20042DataNsin](docs/InlineResponse20042DataNsin.md)
 - [quotesapifordigitalportals.InlineResponse20042DataType](docs/InlineResponse20042DataType.md)
 - [quotesapifordigitalportals.InlineResponse20043](docs/InlineResponse20043.md)
 - [quotesapifordigitalportals.InlineResponse20043Data](docs/InlineResponse20043Data.md)
 - [quotesapifordigitalportals.InlineResponse20044](docs/InlineResponse20044.md)
 - [quotesapifordigitalportals.InlineResponse20044Data](docs/InlineResponse20044Data.md)
 - [quotesapifordigitalportals.InlineResponse20044Type](docs/InlineResponse20044Type.md)
 - [quotesapifordigitalportals.InlineResponse20045](docs/InlineResponse20045.md)
 - [quotesapifordigitalportals.InlineResponse20045Data](docs/InlineResponse20045Data.md)
 - [quotesapifordigitalportals.InlineResponse20046](docs/InlineResponse20046.md)
 - [quotesapifordigitalportals.InlineResponse20046Data](docs/InlineResponse20046Data.md)
 - [quotesapifordigitalportals.InlineResponse20046Notation](docs/InlineResponse20046Notation.md)
 - [quotesapifordigitalportals.InlineResponse20046NotationInstrument](docs/InlineResponse20046NotationInstrument.md)
 - [quotesapifordigitalportals.InlineResponse20046Type](docs/InlineResponse20046Type.md)
 - [quotesapifordigitalportals.InlineResponse20047](docs/InlineResponse20047.md)
 - [quotesapifordigitalportals.InlineResponse20047Data](docs/InlineResponse20047Data.md)
 - [quotesapifordigitalportals.InlineResponse20047Dataset](docs/InlineResponse20047Dataset.md)
 - [quotesapifordigitalportals.InlineResponse20048](docs/InlineResponse20048.md)
 - [quotesapifordigitalportals.InlineResponse20048Data](docs/InlineResponse20048Data.md)
 - [quotesapifordigitalportals.InlineResponse20049](docs/InlineResponse20049.md)
 - [quotesapifordigitalportals.InlineResponse2004Data](docs/InlineResponse2004Data.md)
 - [quotesapifordigitalportals.InlineResponse2005](docs/InlineResponse2005.md)
 - [quotesapifordigitalportals.InlineResponse20050](docs/InlineResponse20050.md)
 - [quotesapifordigitalportals.InlineResponse20050Data](docs/InlineResponse20050Data.md)
 - [quotesapifordigitalportals.InlineResponse20050DataComponents](docs/InlineResponse20050DataComponents.md)
 - [quotesapifordigitalportals.InlineResponse20050DataNotation](docs/InlineResponse20050DataNotation.md)
 - [quotesapifordigitalportals.InlineResponse20050DataNotationInstrument](docs/InlineResponse20050DataNotationInstrument.md)
 - [quotesapifordigitalportals.InlineResponse20050DataNotationOperatingMIC](docs/InlineResponse20050DataNotationOperatingMIC.md)
 - [quotesapifordigitalportals.InlineResponse20050DataValueUnit](docs/InlineResponse20050DataValueUnit.md)
 - [quotesapifordigitalportals.InlineResponse20051](docs/InlineResponse20051.md)
 - [quotesapifordigitalportals.InlineResponse20051Data](docs/InlineResponse20051Data.md)
 - [quotesapifordigitalportals.InlineResponse20051DataCoupons](docs/InlineResponse20051DataCoupons.md)
 - [quotesapifordigitalportals.InlineResponse20051DataCurrency](docs/InlineResponse20051DataCurrency.md)
 - [quotesapifordigitalportals.InlineResponse20051DataInterestRate](docs/InlineResponse20051DataInterestRate.md)
 - [quotesapifordigitalportals.InlineResponse20051DataInterestRateAnnualized](docs/InlineResponse20051DataInterestRateAnnualized.md)
 - [quotesapifordigitalportals.InlineResponse20051DataInterestRatePeriodic](docs/InlineResponse20051DataInterestRatePeriodic.md)
 - [quotesapifordigitalportals.InlineResponse20051DataInterestRateType](docs/InlineResponse20051DataInterestRateType.md)
 - [quotesapifordigitalportals.InlineResponse20051DataPeriod](docs/InlineResponse20051DataPeriod.md)
 - [quotesapifordigitalportals.InlineResponse20052](docs/InlineResponse20052.md)
 - [quotesapifordigitalportals.InlineResponse20052Data](docs/InlineResponse20052Data.md)
 - [quotesapifordigitalportals.InlineResponse20053](docs/InlineResponse20053.md)
 - [quotesapifordigitalportals.InlineResponse20054](docs/InlineResponse20054.md)
 - [quotesapifordigitalportals.InlineResponse20054Data](docs/InlineResponse20054Data.md)
 - [quotesapifordigitalportals.InlineResponse20054DataDayCountConvention](docs/InlineResponse20054DataDayCountConvention.md)
 - [quotesapifordigitalportals.InlineResponse20054DataInterestRate](docs/InlineResponse20054DataInterestRate.md)
 - [quotesapifordigitalportals.InlineResponse20054DataInterestRateCurrent](docs/InlineResponse20054DataInterestRateCurrent.md)
 - [quotesapifordigitalportals.InlineResponse20054DataInterestRateCurrentAccruedInterest](docs/InlineResponse20054DataInterestRateCurrentAccruedInterest.md)
 - [quotesapifordigitalportals.InlineResponse20054DataInterestRateCurrentType](docs/InlineResponse20054DataInterestRateCurrentType.md)
 - [quotesapifordigitalportals.InlineResponse20054DataInterestRateFinal](docs/InlineResponse20054DataInterestRateFinal.md)
 - [quotesapifordigitalportals.InlineResponse20054DataInterestRateInitial](docs/InlineResponse20054DataInterestRateInitial.md)
 - [quotesapifordigitalportals.InlineResponse20054DataOccurrence](docs/InlineResponse20054DataOccurrence.md)
 - [quotesapifordigitalportals.InlineResponse20054DataOccurrenceFrequency](docs/InlineResponse20054DataOccurrenceFrequency.md)
 - [quotesapifordigitalportals.InlineResponse20055](docs/InlineResponse20055.md)
 - [quotesapifordigitalportals.InlineResponse20055Data](docs/InlineResponse20055Data.md)
 - [quotesapifordigitalportals.InlineResponse20055DataValidity](docs/InlineResponse20055DataValidity.md)
 - [quotesapifordigitalportals.InlineResponse20056](docs/InlineResponse20056.md)
 - [quotesapifordigitalportals.InlineResponse20056Data](docs/InlineResponse20056Data.md)
 - [quotesapifordigitalportals.InlineResponse20056Status](docs/InlineResponse20056Status.md)
 - [quotesapifordigitalportals.InlineResponse20057](docs/InlineResponse20057.md)
 - [quotesapifordigitalportals.InlineResponse20057Data](docs/InlineResponse20057Data.md)
 - [quotesapifordigitalportals.InlineResponse20057Status](docs/InlineResponse20057Status.md)
 - [quotesapifordigitalportals.InlineResponse20058](docs/InlineResponse20058.md)
 - [quotesapifordigitalportals.InlineResponse20058Data](docs/InlineResponse20058Data.md)
 - [quotesapifordigitalportals.InlineResponse20059](docs/InlineResponse20059.md)
 - [quotesapifordigitalportals.InlineResponse20059Data](docs/InlineResponse20059Data.md)
 - [quotesapifordigitalportals.InlineResponse20059DataInstrument](docs/InlineResponse20059DataInstrument.md)
 - [quotesapifordigitalportals.InlineResponse2005Data](docs/InlineResponse2005Data.md)
 - [quotesapifordigitalportals.InlineResponse2006](docs/InlineResponse2006.md)
 - [quotesapifordigitalportals.InlineResponse20060](docs/InlineResponse20060.md)
 - [quotesapifordigitalportals.InlineResponse20060Data](docs/InlineResponse20060Data.md)
 - [quotesapifordigitalportals.InlineResponse20060LegalEntities](docs/InlineResponse20060LegalEntities.md)
 - [quotesapifordigitalportals.InlineResponse20060LegalEntitiesBackgroundTexts](docs/InlineResponse20060LegalEntitiesBackgroundTexts.md)
 - [quotesapifordigitalportals.InlineResponse20060LegalEntitiesBackgroundTextsType](docs/InlineResponse20060LegalEntitiesBackgroundTextsType.md)
 - [quotesapifordigitalportals.InlineResponse20061](docs/InlineResponse20061.md)
 - [quotesapifordigitalportals.InlineResponse20061Data](docs/InlineResponse20061Data.md)
 - [quotesapifordigitalportals.InlineResponse20061LegalEntities](docs/InlineResponse20061LegalEntities.md)
 - [quotesapifordigitalportals.InlineResponse20062](docs/InlineResponse20062.md)
 - [quotesapifordigitalportals.InlineResponse20062Data](docs/InlineResponse20062Data.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndCharges](docs/InlineResponse20062DataCostsAndCharges.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExAnte](docs/InlineResponse20062DataCostsAndChargesExAnte.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExAnteDistributionFee](docs/InlineResponse20062DataCostsAndChargesExAnteDistributionFee.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExAnteIncidentalCosts](docs/InlineResponse20062DataCostsAndChargesExAnteIncidentalCosts.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExAnteItaly](docs/InlineResponse20062DataCostsAndChargesExAnteItaly.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExAnteItalyOneOffMaximumFixedEntryCost](docs/InlineResponse20062DataCostsAndChargesExAnteItalyOneOffMaximumFixedEntryCost.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExAnteItalyOneOffMaximumFixedExitCost](docs/InlineResponse20062DataCostsAndChargesExAnteItalyOneOffMaximumFixedExitCost.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExAnteManagementFee](docs/InlineResponse20062DataCostsAndChargesExAnteManagementFee.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExAnteOneOffEntryCost](docs/InlineResponse20062DataCostsAndChargesExAnteOneOffEntryCost.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExAnteOneOffEntryCostValueUnit](docs/InlineResponse20062DataCostsAndChargesExAnteOneOffEntryCostValueUnit.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExAnteOneOffMaximumAcquiredEntryCost](docs/InlineResponse20062DataCostsAndChargesExAnteOneOffMaximumAcquiredEntryCost.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExAnteOneOffMaximumAcquiredExitCost](docs/InlineResponse20062DataCostsAndChargesExAnteOneOffMaximumAcquiredExitCost.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExAnteOneOffMaximumExitCost](docs/InlineResponse20062DataCostsAndChargesExAnteOneOffMaximumExitCost.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExAnteOneOffPriorRHPExitCost](docs/InlineResponse20062DataCostsAndChargesExAnteOneOffPriorRHPExitCost.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExAnteOneOffTypicalExitCost](docs/InlineResponse20062DataCostsAndChargesExAnteOneOffTypicalExitCost.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExAnteOngoingCosts](docs/InlineResponse20062DataCostsAndChargesExAnteOngoingCosts.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExAnteTransactionCosts](docs/InlineResponse20062DataCostsAndChargesExAnteTransactionCosts.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExPost](docs/InlineResponse20062DataCostsAndChargesExPost.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExPostDistributionFee](docs/InlineResponse20062DataCostsAndChargesExPostDistributionFee.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExPostIncidentalCosts](docs/InlineResponse20062DataCostsAndChargesExPostIncidentalCosts.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExPostManagementFee](docs/InlineResponse20062DataCostsAndChargesExPostManagementFee.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExPostOneOffEntryCost](docs/InlineResponse20062DataCostsAndChargesExPostOneOffEntryCost.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExPostOneOffExitCost](docs/InlineResponse20062DataCostsAndChargesExPostOneOffExitCost.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExPostOngoingCostAccumulated](docs/InlineResponse20062DataCostsAndChargesExPostOngoingCostAccumulated.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExPostOngoingCosts](docs/InlineResponse20062DataCostsAndChargesExPostOngoingCosts.md)
 - [quotesapifordigitalportals.InlineResponse20062DataCostsAndChargesExPostTransactionCosts](docs/InlineResponse20062DataCostsAndChargesExPostTransactionCosts.md)
 - [quotesapifordigitalportals.InlineResponse20062DataDistributionChannel](docs/InlineResponse20062DataDistributionChannel.md)
 - [quotesapifordigitalportals.InlineResponse20062DataGeneral](docs/InlineResponse20062DataGeneral.md)
 - [quotesapifordigitalportals.InlineResponse20062DataGeneralCurrency](docs/InlineResponse20062DataGeneralCurrency.md)
 - [quotesapifordigitalportals.InlineResponse20062DataGeneralFund](docs/InlineResponse20062DataGeneralFund.md)
 - [quotesapifordigitalportals.InlineResponse20062DataGeneralFundDomicile](docs/InlineResponse20062DataGeneralFundDomicile.md)
 - [quotesapifordigitalportals.InlineResponse20062DataGeneralGuarantor](docs/InlineResponse20062DataGeneralGuarantor.md)
 - [quotesapifordigitalportals.InlineResponse20062DataGeneralIssuer](docs/InlineResponse20062DataGeneralIssuer.md)
 - [quotesapifordigitalportals.InlineResponse20062DataGeneralLegalStructure](docs/InlineResponse20062DataGeneralLegalStructure.md)
 - [quotesapifordigitalportals.InlineResponse20062DataGeneralManufacturer](docs/InlineResponse20062DataGeneralManufacturer.md)
 - [quotesapifordigitalportals.InlineResponse20062DataGeneralType](docs/InlineResponse20062DataGeneralType.md)
 - [quotesapifordigitalportals.InlineResponse20062DataTargetMarket](docs/InlineResponse20062DataTargetMarket.md)
 - [quotesapifordigitalportals.InlineResponse20062DataTargetMarketAbilityToBearLosses](docs/InlineResponse20062DataTargetMarketAbilityToBearLosses.md)
 - [quotesapifordigitalportals.InlineResponse20062DataTargetMarketClientObjectivesAndNeeds](docs/InlineResponse20062DataTargetMarketClientObjectivesAndNeeds.md)
 - [quotesapifordigitalportals.InlineResponse20062DataTargetMarketClientObjectivesAndNeedsReturnProfile](docs/InlineResponse20062DataTargetMarketClientObjectivesAndNeedsReturnProfile.md)
 - [quotesapifordigitalportals.InlineResponse20062DataTargetMarketClientObjectivesAndNeedsReturnProfileGermany](docs/InlineResponse20062DataTargetMarketClientObjectivesAndNeedsReturnProfileGermany.md)
 - [quotesapifordigitalportals.InlineResponse20062DataTargetMarketInvestorType](docs/InlineResponse20062DataTargetMarketInvestorType.md)
 - [quotesapifordigitalportals.InlineResponse20062DataTargetMarketKnowledgeAndExperience](docs/InlineResponse20062DataTargetMarketKnowledgeAndExperience.md)
 - [quotesapifordigitalportals.InlineResponse20062DataTargetMarketKnowledgeAndExperienceGermany](docs/InlineResponse20062DataTargetMarketKnowledgeAndExperienceGermany.md)
 - [quotesapifordigitalportals.InlineResponse20062DataTargetMarketRecommendedHoldingPeriod](docs/InlineResponse20062DataTargetMarketRecommendedHoldingPeriod.md)
 - [quotesapifordigitalportals.InlineResponse20062DataTargetMarketRiskTolerance](docs/InlineResponse20062DataTargetMarketRiskTolerance.md)
 - [quotesapifordigitalportals.InlineResponse20062DataTargetMarketRiskToleranceGermany](docs/InlineResponse20062DataTargetMarketRiskToleranceGermany.md)
 - [quotesapifordigitalportals.InlineResponse20062DataTargetMarketRiskToleranceInternalRiskRating](docs/InlineResponse20062DataTargetMarketRiskToleranceInternalRiskRating.md)
 - [quotesapifordigitalportals.InlineResponse20062DataTargetMarketRiskToleranceSpain](docs/InlineResponse20062DataTargetMarketRiskToleranceSpain.md)
 - [quotesapifordigitalportals.InlineResponse20062DataTargetMarketRiskToleranceSri](docs/InlineResponse20062DataTargetMarketRiskToleranceSri.md)
 - [quotesapifordigitalportals.InlineResponse20062DataTargetMarketRiskToleranceSrri](docs/InlineResponse20062DataTargetMarketRiskToleranceSrri.md)
 - [quotesapifordigitalportals.InlineResponse20063](docs/InlineResponse20063.md)
 - [quotesapifordigitalportals.InlineResponse20063Current](docs/InlineResponse20063Current.md)
 - [quotesapifordigitalportals.InlineResponse20063Data](docs/InlineResponse20063Data.md)
 - [quotesapifordigitalportals.InlineResponse20063Previous](docs/InlineResponse20063Previous.md)
 - [quotesapifordigitalportals.InlineResponse20063Ratings](docs/InlineResponse20063Ratings.md)
 - [quotesapifordigitalportals.InlineResponse20063System](docs/InlineResponse20063System.md)
 - [quotesapifordigitalportals.InlineResponse20064](docs/InlineResponse20064.md)
 - [quotesapifordigitalportals.InlineResponse20064Data](docs/InlineResponse20064Data.md)
 - [quotesapifordigitalportals.InlineResponse20064DataInstrument](docs/InlineResponse20064DataInstrument.md)
 - [quotesapifordigitalportals.InlineResponse20064DataMarket](docs/InlineResponse20064DataMarket.md)
 - [quotesapifordigitalportals.InlineResponse20064DataValueUnit](docs/InlineResponse20064DataValueUnit.md)
 - [quotesapifordigitalportals.InlineResponse20065](docs/InlineResponse20065.md)
 - [quotesapifordigitalportals.InlineResponse20065Data](docs/InlineResponse20065Data.md)
 - [quotesapifordigitalportals.InlineResponse20065Status](docs/InlineResponse20065Status.md)
 - [quotesapifordigitalportals.InlineResponse20066](docs/InlineResponse20066.md)
 - [quotesapifordigitalportals.InlineResponse20066Data](docs/InlineResponse20066Data.md)
 - [quotesapifordigitalportals.InlineResponse20066DataInstrument](docs/InlineResponse20066DataInstrument.md)
 - [quotesapifordigitalportals.InlineResponse20066DataMarket](docs/InlineResponse20066DataMarket.md)
 - [quotesapifordigitalportals.InlineResponse20066DataValueUnit](docs/InlineResponse20066DataValueUnit.md)
 - [quotesapifordigitalportals.InlineResponse20067](docs/InlineResponse20067.md)
 - [quotesapifordigitalportals.InlineResponse20067Data](docs/InlineResponse20067Data.md)
 - [quotesapifordigitalportals.InlineResponse20067Fsym](docs/InlineResponse20067Fsym.md)
 - [quotesapifordigitalportals.InlineResponse20067FsymListing](docs/InlineResponse20067FsymListing.md)
 - [quotesapifordigitalportals.InlineResponse20067FsymRegional](docs/InlineResponse20067FsymRegional.md)
 - [quotesapifordigitalportals.InlineResponse20068](docs/InlineResponse20068.md)
 - [quotesapifordigitalportals.InlineResponse20068Data](docs/InlineResponse20068Data.md)
 - [quotesapifordigitalportals.InlineResponse20068Instrument](docs/InlineResponse20068Instrument.md)
 - [quotesapifordigitalportals.InlineResponse20069](docs/InlineResponse20069.md)
 - [quotesapifordigitalportals.InlineResponse20069Data](docs/InlineResponse20069Data.md)
 - [quotesapifordigitalportals.InlineResponse20069DataInstrument](docs/InlineResponse20069DataInstrument.md)
 - [quotesapifordigitalportals.InlineResponse20069DataRegional](docs/InlineResponse20069DataRegional.md)
 - [quotesapifordigitalportals.InlineResponse20069DataRegionalListing](docs/InlineResponse20069DataRegionalListing.md)
 - [quotesapifordigitalportals.InlineResponse2006Data](docs/InlineResponse2006Data.md)
 - [quotesapifordigitalportals.InlineResponse2007](docs/InlineResponse2007.md)
 - [quotesapifordigitalportals.InlineResponse20070](docs/InlineResponse20070.md)
 - [quotesapifordigitalportals.InlineResponse20070Data](docs/InlineResponse20070Data.md)
 - [quotesapifordigitalportals.InlineResponse20070DataInstrument](docs/InlineResponse20070DataInstrument.md)
 - [quotesapifordigitalportals.InlineResponse20070DataListing](docs/InlineResponse20070DataListing.md)
 - [quotesapifordigitalportals.InlineResponse20070DataNotation](docs/InlineResponse20070DataNotation.md)
 - [quotesapifordigitalportals.InlineResponse20070DataRegional](docs/InlineResponse20070DataRegional.md)
 - [quotesapifordigitalportals.InlineResponse20071](docs/InlineResponse20071.md)
 - [quotesapifordigitalportals.InlineResponse20071Data](docs/InlineResponse20071Data.md)
 - [quotesapifordigitalportals.InlineResponse20072](docs/InlineResponse20072.md)
 - [quotesapifordigitalportals.InlineResponse20072Data](docs/InlineResponse20072Data.md)
 - [quotesapifordigitalportals.InlineResponse20072DataHigh](docs/InlineResponse20072DataHigh.md)
 - [quotesapifordigitalportals.InlineResponse20072DataLow](docs/InlineResponse20072DataLow.md)
 - [quotesapifordigitalportals.InlineResponse20072DataPerformance](docs/InlineResponse20072DataPerformance.md)
 - [quotesapifordigitalportals.InlineResponse20072DataTradingVolume](docs/InlineResponse20072DataTradingVolume.md)
 - [quotesapifordigitalportals.InlineResponse20073](docs/InlineResponse20073.md)
 - [quotesapifordigitalportals.InlineResponse20073Data](docs/InlineResponse20073Data.md)
 - [quotesapifordigitalportals.InlineResponse20073Status](docs/InlineResponse20073Status.md)
 - [quotesapifordigitalportals.InlineResponse20074](docs/InlineResponse20074.md)
 - [quotesapifordigitalportals.InlineResponse20074Data](docs/InlineResponse20074Data.md)
 - [quotesapifordigitalportals.InlineResponse20075](docs/InlineResponse20075.md)
 - [quotesapifordigitalportals.InlineResponse20075Data](docs/InlineResponse20075Data.md)
 - [quotesapifordigitalportals.InlineResponse20076](docs/InlineResponse20076.md)
 - [quotesapifordigitalportals.InlineResponse20076Data](docs/InlineResponse20076Data.md)
 - [quotesapifordigitalportals.InlineResponse20077](docs/InlineResponse20077.md)
 - [quotesapifordigitalportals.InlineResponse20077Data](docs/InlineResponse20077Data.md)
 - [quotesapifordigitalportals.InlineResponse20078](docs/InlineResponse20078.md)
 - [quotesapifordigitalportals.InlineResponse20078Data](docs/InlineResponse20078Data.md)
 - [quotesapifordigitalportals.InlineResponse20078DataMarket](docs/InlineResponse20078DataMarket.md)
 - [quotesapifordigitalportals.InlineResponse20079](docs/InlineResponse20079.md)
 - [quotesapifordigitalportals.InlineResponse20079Data](docs/InlineResponse20079Data.md)
 - [quotesapifordigitalportals.InlineResponse20079DataAccumulated](docs/InlineResponse20079DataAccumulated.md)
 - [quotesapifordigitalportals.InlineResponse20079DataCurrency](docs/InlineResponse20079DataCurrency.md)
 - [quotesapifordigitalportals.InlineResponse20079DataFirst](docs/InlineResponse20079DataFirst.md)
 - [quotesapifordigitalportals.InlineResponse20079DataHigh](docs/InlineResponse20079DataHigh.md)
 - [quotesapifordigitalportals.InlineResponse20079DataLatest](docs/InlineResponse20079DataLatest.md)
 - [quotesapifordigitalportals.InlineResponse20079DataLatestPerformance](docs/InlineResponse20079DataLatestPerformance.md)
 - [quotesapifordigitalportals.InlineResponse20079DataLatestPerformanceIntraday](docs/InlineResponse20079DataLatestPerformanceIntraday.md)
 - [quotesapifordigitalportals.InlineResponse20079DataLow](docs/InlineResponse20079DataLow.md)
 - [quotesapifordigitalportals.InlineResponse20079DataMarket](docs/InlineResponse20079DataMarket.md)
 - [quotesapifordigitalportals.InlineResponse20079DataPreviousClose](docs/InlineResponse20079DataPreviousClose.md)
 - [quotesapifordigitalportals.InlineResponse20079DataValueUnit](docs/InlineResponse20079DataValueUnit.md)
 - [quotesapifordigitalportals.InlineResponse2007Data](docs/InlineResponse2007Data.md)
 - [quotesapifordigitalportals.InlineResponse2008](docs/InlineResponse2008.md)
 - [quotesapifordigitalportals.InlineResponse20080](docs/InlineResponse20080.md)
 - [quotesapifordigitalportals.InlineResponse20080Accumulated](docs/InlineResponse20080Accumulated.md)
 - [quotesapifordigitalportals.InlineResponse20080Data](docs/InlineResponse20080Data.md)
 - [quotesapifordigitalportals.InlineResponse20080First](docs/InlineResponse20080First.md)
 - [quotesapifordigitalportals.InlineResponse20080High](docs/InlineResponse20080High.md)
 - [quotesapifordigitalportals.InlineResponse20080Latest](docs/InlineResponse20080Latest.md)
 - [quotesapifordigitalportals.InlineResponse20080LatestPerformance](docs/InlineResponse20080LatestPerformance.md)
 - [quotesapifordigitalportals.InlineResponse20080LatestPerformanceIntraday](docs/InlineResponse20080LatestPerformanceIntraday.md)
 - [quotesapifordigitalportals.InlineResponse20080Low](docs/InlineResponse20080Low.md)
 - [quotesapifordigitalportals.InlineResponse20080PreviousClose](docs/InlineResponse20080PreviousClose.md)
 - [quotesapifordigitalportals.InlineResponse20081](docs/InlineResponse20081.md)
 - [quotesapifordigitalportals.InlineResponse20081Data](docs/InlineResponse20081Data.md)
 - [quotesapifordigitalportals.InlineResponse20081DataAsk](docs/InlineResponse20081DataAsk.md)
 - [quotesapifordigitalportals.InlineResponse20081DataBid](docs/InlineResponse20081DataBid.md)
 - [quotesapifordigitalportals.InlineResponse20082](docs/InlineResponse20082.md)
 - [quotesapifordigitalportals.InlineResponse20082Ask](docs/InlineResponse20082Ask.md)
 - [quotesapifordigitalportals.InlineResponse20082Bid](docs/InlineResponse20082Bid.md)
 - [quotesapifordigitalportals.InlineResponse20082Data](docs/InlineResponse20082Data.md)
 - [quotesapifordigitalportals.InlineResponse20083](docs/InlineResponse20083.md)
 - [quotesapifordigitalportals.InlineResponse20083Data](docs/InlineResponse20083Data.md)
 - [quotesapifordigitalportals.InlineResponse20083DataAsks](docs/InlineResponse20083DataAsks.md)
 - [quotesapifordigitalportals.InlineResponse20084](docs/InlineResponse20084.md)
 - [quotesapifordigitalportals.InlineResponse20084Data](docs/InlineResponse20084Data.md)
 - [quotesapifordigitalportals.InlineResponse20084DataAsks](docs/InlineResponse20084DataAsks.md)
 - [quotesapifordigitalportals.InlineResponse20085](docs/InlineResponse20085.md)
 - [quotesapifordigitalportals.InlineResponse20085Data](docs/InlineResponse20085Data.md)
 - [quotesapifordigitalportals.InlineResponse20085DataEvents](docs/InlineResponse20085DataEvents.md)
 - [quotesapifordigitalportals.InlineResponse20085DataRange](docs/InlineResponse20085DataRange.md)
 - [quotesapifordigitalportals.InlineResponse20085DataType](docs/InlineResponse20085DataType.md)
 - [quotesapifordigitalportals.InlineResponse20085Meta](docs/InlineResponse20085Meta.md)
 - [quotesapifordigitalportals.InlineResponse20086](docs/InlineResponse20086.md)
 - [quotesapifordigitalportals.InlineResponse20086Data](docs/InlineResponse20086Data.md)
 - [quotesapifordigitalportals.InlineResponse20087](docs/InlineResponse20087.md)
 - [quotesapifordigitalportals.InlineResponse20087Data](docs/InlineResponse20087Data.md)
 - [quotesapifordigitalportals.InlineResponse20088](docs/InlineResponse20088.md)
 - [quotesapifordigitalportals.InlineResponse20088Data](docs/InlineResponse20088Data.md)
 - [quotesapifordigitalportals.InlineResponse20088Instrument](docs/InlineResponse20088Instrument.md)
 - [quotesapifordigitalportals.InlineResponse20088InstrumentNsin](docs/InlineResponse20088InstrumentNsin.md)
 - [quotesapifordigitalportals.InlineResponse20088Nsin](docs/InlineResponse20088Nsin.md)
 - [quotesapifordigitalportals.InlineResponse20088Price](docs/InlineResponse20088Price.md)
 - [quotesapifordigitalportals.InlineResponse20089](docs/InlineResponse20089.md)
 - [quotesapifordigitalportals.InlineResponse20089Data](docs/InlineResponse20089Data.md)
 - [quotesapifordigitalportals.InlineResponse20089Instrument](docs/InlineResponse20089Instrument.md)
 - [quotesapifordigitalportals.InlineResponse20089InstrumentAssetClass](docs/InlineResponse20089InstrumentAssetClass.md)
 - [quotesapifordigitalportals.InlineResponse20089InstrumentName](docs/InlineResponse20089InstrumentName.md)
 - [quotesapifordigitalportals.InlineResponse20089InstrumentNameDefault](docs/InlineResponse20089InstrumentNameDefault.md)
 - [quotesapifordigitalportals.InlineResponse20089TradingValue](docs/InlineResponse20089TradingValue.md)
 - [quotesapifordigitalportals.InlineResponse20089TradingValueAverage](docs/InlineResponse20089TradingValueAverage.md)
 - [quotesapifordigitalportals.InlineResponse20089ValueUnit](docs/InlineResponse20089ValueUnit.md)
 - [quotesapifordigitalportals.InlineResponse2008Data](docs/InlineResponse2008Data.md)
 - [quotesapifordigitalportals.InlineResponse2008DataCountry](docs/InlineResponse2008DataCountry.md)
 - [quotesapifordigitalportals.InlineResponse2008DataGroup](docs/InlineResponse2008DataGroup.md)
 - [quotesapifordigitalportals.InlineResponse2008DataTimezone](docs/InlineResponse2008DataTimezone.md)
 - [quotesapifordigitalportals.InlineResponse2008DataType](docs/InlineResponse2008DataType.md)
 - [quotesapifordigitalportals.InlineResponse2009](docs/InlineResponse2009.md)
 - [quotesapifordigitalportals.InlineResponse20090](docs/InlineResponse20090.md)
 - [quotesapifordigitalportals.InlineResponse20090Data](docs/InlineResponse20090Data.md)
 - [quotesapifordigitalportals.InlineResponse20090Instrument](docs/InlineResponse20090Instrument.md)
 - [quotesapifordigitalportals.InlineResponse2009Country](docs/InlineResponse2009Country.md)
 - [quotesapifordigitalportals.InlineResponse2009Data](docs/InlineResponse2009Data.md)
 - [quotesapifordigitalportals.InlineResponse2009Group](docs/InlineResponse2009Group.md)
 - [quotesapifordigitalportals.InlineResponse2009Meta](docs/InlineResponse2009Meta.md)
 - [quotesapifordigitalportals.InlineResponse2009Type](docs/InlineResponse2009Type.md)
 - [quotesapifordigitalportals.InlineResponse200Data](docs/InlineResponse200Data.md)
 - [quotesapifordigitalportals.InlineResponse200Meta](docs/InlineResponse200Meta.md)
 - [quotesapifordigitalportals.InstrumentBackgroundTextTypeListData](docs/InstrumentBackgroundTextTypeListData.md)
 - [quotesapifordigitalportals.InstrumentBackgroundTextTypeListDataFilter](docs/InstrumentBackgroundTextTypeListDataFilter.md)
 - [quotesapifordigitalportals.InstrumentBackgroundTextTypeListMeta](docs/InstrumentBackgroundTextTypeListMeta.md)
 - [quotesapifordigitalportals.InstrumentBenchmarkListData](docs/InstrumentBenchmarkListData.md)
 - [quotesapifordigitalportals.InstrumentBenchmarkListDataFilter](docs/InstrumentBenchmarkListDataFilter.md)
 - [quotesapifordigitalportals.InstrumentCategoryListData](docs/InstrumentCategoryListData.md)
 - [quotesapifordigitalportals.InstrumentCategoryListDataFilter](docs/InstrumentCategoryListDataFilter.md)
 - [quotesapifordigitalportals.InstrumentCategoryListDataFilterDataset](docs/InstrumentCategoryListDataFilterDataset.md)
 - [quotesapifordigitalportals.InstrumentCategoryListMeta](docs/InstrumentCategoryListMeta.md)
 - [quotesapifordigitalportals.InstrumentCompliancePropertyListData](docs/InstrumentCompliancePropertyListData.md)
 - [quotesapifordigitalportals.InstrumentCompliancePropertyListDataFilter](docs/InstrumentCompliancePropertyListDataFilter.md)
 - [quotesapifordigitalportals.InstrumentCrossReferenceListByISINData](docs/InstrumentCrossReferenceListByISINData.md)
 - [quotesapifordigitalportals.InstrumentCrossReferenceListByWKNData](docs/InstrumentCrossReferenceListByWKNData.md)
 - [quotesapifordigitalportals.InstrumentRatingGradeListData](docs/InstrumentRatingGradeListData.md)
 - [quotesapifordigitalportals.InstrumentRatingGradeListDataFilter](docs/InstrumentRatingGradeListDataFilter.md)
 - [quotesapifordigitalportals.InstrumentRatingGradeListDataFilterRatingSystem](docs/InstrumentRatingGradeListDataFilterRatingSystem.md)
 - [quotesapifordigitalportals.NotationCrossReferenceFactSetIdentifierListByFactSetIdentifierData](docs/NotationCrossReferenceFactSetIdentifierListByFactSetIdentifierData.md)
 - [quotesapifordigitalportals.NotationCrossReferenceFactSetIdentifierListByInstrumentData](docs/NotationCrossReferenceFactSetIdentifierListByInstrumentData.md)
 - [quotesapifordigitalportals.NotationCrossReferenceListByISINData](docs/NotationCrossReferenceListByISINData.md)
 - [quotesapifordigitalportals.NotationCrossReferenceListByInstrumentData](docs/NotationCrossReferenceListByInstrumentData.md)
 - [quotesapifordigitalportals.NotationCrossReferenceListByInstrumentDataFilter](docs/NotationCrossReferenceListByInstrumentDataFilter.md)
 - [quotesapifordigitalportals.NotationCrossReferenceListByInstrumentDataFilterMarkets](docs/NotationCrossReferenceListByInstrumentDataFilterMarkets.md)
 - [quotesapifordigitalportals.NotationCrossReferenceListByInstrumentDataFilterValueUnits](docs/NotationCrossReferenceListByInstrumentDataFilterValueUnits.md)
 - [quotesapifordigitalportals.NotationCrossReferenceListBySymbolData](docs/NotationCrossReferenceListBySymbolData.md)
 - [quotesapifordigitalportals.NotationSearchByTextData](docs/NotationSearchByTextData.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataAssetClasses](docs/NotationSearchByTextDataAssetClasses.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataMarket](docs/NotationSearchByTextDataMarket.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataMarketOrder](docs/NotationSearchByTextDataMarketOrder.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataText](docs/NotationSearchByTextDataText.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataTradingValue](docs/NotationSearchByTextDataTradingValue.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataTradingValueAverage](docs/NotationSearchByTextDataTradingValueAverage.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataTradingValueAverageDays30](docs/NotationSearchByTextDataTradingValueAverageDays30.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataTradingValueAverageDays30Maximum](docs/NotationSearchByTextDataTradingValueAverageDays30Maximum.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataTradingValueAverageDays30Minimum](docs/NotationSearchByTextDataTradingValueAverageDays30Minimum.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataValidation](docs/NotationSearchByTextDataValidation.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataValidationMarket](docs/NotationSearchByTextDataValidationMarket.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataValidationMarketPriority](docs/NotationSearchByTextDataValidationMarketPriority.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataValidationMarketSelection](docs/NotationSearchByTextDataValidationMarketSelection.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataValidationMarketSelectionExclude](docs/NotationSearchByTextDataValidationMarketSelectionExclude.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataValidationMarketSelectionRestrict](docs/NotationSearchByTextDataValidationMarketSelectionRestrict.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataValidationPrices](docs/NotationSearchByTextDataValidationPrices.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataValidationPricesLatest](docs/NotationSearchByTextDataValidationPricesLatest.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataValidationPricesPrevious](docs/NotationSearchByTextDataValidationPricesPrevious.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataValidationValueUnit](docs/NotationSearchByTextDataValidationValueUnit.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataValidationValueUnitSelection](docs/NotationSearchByTextDataValidationValueUnitSelection.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataValidationValueUnitSelectionExclude](docs/NotationSearchByTextDataValidationValueUnitSelectionExclude.md)
 - [quotesapifordigitalportals.NotationSearchByTextDataValidationValueUnitSelectionRestrict](docs/NotationSearchByTextDataValidationValueUnitSelectionRestrict.md)
 - [quotesapifordigitalportals.NotationSearchByTextMeta](docs/NotationSearchByTextMeta.md)
 - [quotesapifordigitalportals.OffsetBasedPaginationOutputObject](docs/OffsetBasedPaginationOutputObject.md)
 - [quotesapifordigitalportals.OffsetBasedPaginationOutputObjectWithoutTotal](docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [quotesapifordigitalportals.PartialOutputObject](docs/PartialOutputObject.md)
 - [quotesapifordigitalportals.PricesTradingScheduleEventListData](docs/PricesTradingScheduleEventListData.md)
 - [quotesapifordigitalportals.PricesTradingScheduleEventListDataFilter](docs/PricesTradingScheduleEventListDataFilter.md)
 - [quotesapifordigitalportals.PricesTradingScheduleEventListDataFilterRange](docs/PricesTradingScheduleEventListDataFilterRange.md)
 - [quotesapifordigitalportals.PricesTradingScheduleEventListMeta](docs/PricesTradingScheduleEventListMeta.md)
 - [quotesapifordigitalportals.PricesTradingScheduleEventListMetaPagination](docs/PricesTradingScheduleEventListMetaPagination.md)
 - [quotesapifordigitalportals.StatusObject](docs/StatusObject.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
